--- a/projetos.html
+++ b/projetos.html
@@ -100,7 +100,7 @@
                             crossorigin="anonymous"></script>
 
                             <div class="robo">
-                                <img src="balaorobozin.png" alt="balaorobozin"><img class="roboz" src="robozin.png" alt="robozinho">
+                                <img src="balaorobozin.png" alt="balaorobozin"><img src="robozin.png" alt="robozinho">
                             </div>
 </body>
 
