--- a/projetos.html
+++ b/projetos.html
@@ -100,7 +100,15 @@
                             crossorigin="anonymous"></script>
 
                             <div class="robo">
-                                <img src="balaorobozin.png" alt="balaorobozin"><img src="robozin.png" alt="robozinho">
+
+                                <div class="balao">
+                                <img src="balaorobozin.png" alt="balaorobozin">
+                                </div>
+
+                                <div class="roboz">
+                                <img src="robozin.png" alt="robozinho">
+                                </div>
+                                
                             </div>
 </body>
 
